create to_cat transformation function
identify and convert string columns to categorical columns in a dataframe

--- a/Titanic-competition/2022-08-22-titanic-autoML.ipynb
+++ b/Titanic-competition/2022-08-22-titanic-autoML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "0e612bd7-3aa4-43c2-b5f1-1b8e6b30671d",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "ee41729f-5e3a-401b-a259-eee96f83851e",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "f45642a5-b30b-407a-9b65-245d030fed5a",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "a0ad8d90-8594-4271-b63a-5ce32dd2d17a",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "a58fab94-a22e-471d-aedf-a64e44dc7a9d",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "5            35.0      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "1729c29c-d1cc-46f9-86db-ebbab4b07128",
    "metadata": {},
    "outputs": [],
@@ -255,34 +255,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "0e3c0ec1-79e2-4d4a-bb50-658397c59c95",
+   "execution_count": 20,
+   "id": "71a862b7-2753-4c05-b21e-8e3cc1422eb1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Continuous-type columns: ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare']\n",
-      "Categorical-type columns: ['Sex', 'Ticket', 'Cabin', 'Embarked']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cont, cat = cont_cat_split(X_train, 1)\n",
-    "print(f'Continuous-type columns: {cont}')\n",
-    "print(f'Categorical-type columns: {cat}')"
+    "def to_cat(df = df):\n",
+    "    '''\n",
+    "    Convert string-type columns from a dataframe into categorical columns\n",
+    "    '''\n",
+    "    # Identify string/categorical columns in the dataframe\n",
+    "    _, cat = cont_cat_split(df, 1)\n",
+    "    \n",
+    "    # Convert to categorical type using for loops\n",
+    "    for col in cat:\n",
+    "        df[col] = pd.Categorical(df[col])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "dcb6bdfa-ea00-4877-8c2a-fa9f11f79f82",
+   "execution_count": 21,
+   "id": "3c44fa46-b95e-4bfc-8995-121c7295479a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for col in cat:\n",
-    "    X_train[col] = pd.Categorical(X_train[col])"
+    "to_cat(X_train)"
    ]
   },
   {
@@ -712,8 +709,7 @@
    "source": [
     "df_test = pd.read_csv(path/'test.csv', index_col = 'PassengerId')\n",
     "df_test = df_test.drop('Name', axis = 1)\n",
-    "for col in cat:\n",
-    "    df_test[col] = pd.Categorical(df_test[col])\n",
+    "to_cat(df_test)\n",
     "\n",
     "for col in ['Age', 'Fare']:\n",
     "    df_test[col] = ((df_test[col]) - df_test[col].min()) / (df_test[col].max() - df_test[col].min())\n",
