--- a/Titanic-competition/2022-08-22-titanic-autoML.ipynb
+++ b/Titanic-competition/2022-08-22-titanic-autoML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "0e612bd7-3aa4-43c2-b5f1-1b8e6b30671d",
    "metadata": {},
    "outputs": [],
@@ -17,18 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "ee41729f-5e3a-401b-a259-eee96f83851e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /root/.kaggle/kaggle.json'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "comp = 'titanic'\n",
     "path = setup_comp(comp, install = 'fastai \"timm >= 0.6.2.dev0\"')"
@@ -36,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "f45642a5-b30b-407a-9b65-245d030fed5a",
    "metadata": {},
    "outputs": [],
@@ -51,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "a0ad8d90-8594-4271-b63a-5ce32dd2d17a",
    "metadata": {},
    "outputs": [
@@ -69,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "a58fab94-a22e-471d-aedf-a64e44dc7a9d",
    "metadata": {},
    "outputs": [
@@ -222,7 +214,7 @@
        "5            35.0      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "d8102576-ad3a-4c6a-bc81-315fa06818b0",
    "metadata": {},
    "outputs": [],
@@ -245,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "1729c29c-d1cc-46f9-86db-ebbab4b07128",
    "metadata": {},
    "outputs": [],
@@ -255,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "71a862b7-2753-4c05-b21e-8e3cc1422eb1",
    "metadata": {},
    "outputs": [],
@@ -274,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "3c44fa46-b95e-4bfc-8995-121c7295479a",
    "metadata": {},
    "outputs": [],
@@ -284,19 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "f254ff08-496f-4b38-98b2-f9d5e74a7c74",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Normalize fare and age\n",
-    "for col in ['Age', 'Fare']:\n",
-    "    X_train[col] = ((X_train[col]) - X_train[col].min()) / (X_train[col].max() - X_train[col].min())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "id": "1a6402ac-5e92-4ce5-b9bc-678b9cd8a002",
    "metadata": {},
    "outputs": [
@@ -349,11 +329,11 @@
        "      <th>1</th>\n",
        "      <td>3</td>\n",
        "      <td>male</td>\n",
-       "      <td>0.271174</td>\n",
+       "      <td>22.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>A/5 21171</td>\n",
-       "      <td>0.014151</td>\n",
+       "      <td>7.2500</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
@@ -361,11 +341,11 @@
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>female</td>\n",
-       "      <td>0.472229</td>\n",
+       "      <td>38.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>PC 17599</td>\n",
-       "      <td>0.139136</td>\n",
+       "      <td>71.2833</td>\n",
        "      <td>C85</td>\n",
        "      <td>C</td>\n",
        "    </tr>\n",
@@ -373,11 +353,11 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>female</td>\n",
-       "      <td>0.321438</td>\n",
+       "      <td>26.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>STON/O2. 3101282</td>\n",
-       "      <td>0.015469</td>\n",
+       "      <td>7.9250</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
@@ -385,11 +365,11 @@
        "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>female</td>\n",
-       "      <td>0.434531</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>113803</td>\n",
-       "      <td>0.103644</td>\n",
+       "      <td>53.1000</td>\n",
        "      <td>C123</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
@@ -397,11 +377,11 @@
        "      <th>5</th>\n",
        "      <td>3</td>\n",
        "      <td>male</td>\n",
-       "      <td>0.434531</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>373450</td>\n",
-       "      <td>0.015713</td>\n",
+       "      <td>8.0500</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
@@ -410,24 +390,24 @@
        "</div>"
       ],
       "text/plain": [
-       "             Pclass     Sex       Age  SibSp  Parch            Ticket  \\\n",
-       "PassengerId                                                             \n",
-       "1                 3    male  0.271174      1      0         A/5 21171   \n",
-       "2                 1  female  0.472229      1      0          PC 17599   \n",
-       "3                 3  female  0.321438      0      0  STON/O2. 3101282   \n",
-       "4                 1  female  0.434531      1      0            113803   \n",
-       "5                 3    male  0.434531      0      0            373450   \n",
+       "             Pclass     Sex   Age  SibSp  Parch            Ticket     Fare  \\\n",
+       "PassengerId                                                                  \n",
+       "1                 3    male  22.0      1      0         A/5 21171   7.2500   \n",
+       "2                 1  female  38.0      1      0          PC 17599  71.2833   \n",
+       "3                 3  female  26.0      0      0  STON/O2. 3101282   7.9250   \n",
+       "4                 1  female  35.0      1      0            113803  53.1000   \n",
+       "5                 3    male  35.0      0      0            373450   8.0500   \n",
        "\n",
-       "                 Fare Cabin Embarked  \n",
-       "PassengerId                           \n",
-       "1            0.014151   NaN        S  \n",
-       "2            0.139136   C85        C  \n",
-       "3            0.015469   NaN        S  \n",
-       "4            0.103644  C123        S  \n",
-       "5            0.015713   NaN        S  "
+       "            Cabin Embarked  \n",
+       "PassengerId                 \n",
+       "1             NaN        S  \n",
+       "2             C85        C  \n",
+       "3             NaN        S  \n",
+       "4            C123        S  \n",
+       "5             NaN        S  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,16 +418,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "8d11be50-3bc4-4094-b05f-74bab51d7111",
+   "execution_count": 13,
+   "id": "db99ad1c-7ea9-4779-9c2d-4e805b268d36",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
     "try: import autosklearn\n",
     "except ModuleNotFoundError:\n",
-    "    !pip install -Uq auto-sklearn\n",
-    "\n",
+    "    !pip install -Uq auto-sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8d11be50-3bc4-4094-b05f-74bab51d7111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import autosklearn.classification\n",
     "cls = autosklearn.classification.AutoSklearnClassifier(\n",
     "    time_left_for_this_task = 240,\n",
@@ -458,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "id": "1af60bfa-ec80-4907-aa15-041a51231e23",
    "metadata": {},
    "outputs": [
@@ -476,7 +464,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ERROR] [2022-08-22 20:07:19,410:asyncio.events] \n",
+      "[ERROR] [2022-08-23 15:10:36,573:asyncio.events] \n",
       "Traceback (most recent call last):\n",
       "  File \"/root/mambaforge/lib/python3.9/site-packages/distributed/client.py\", line 1427, in _handle_report\n",
       "    msgs = await self.scheduler_comm.comm.read()\n",
@@ -511,7 +499,7 @@
        "                      time_left_for_this_task=240)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,17 +510,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "de6a731a-2a0b-4171-84a9-3baed326bef8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "auto-sklearn results:\n",
+      "  Dataset name: 30798895-22f5-11ed-8943-b6f6766cb37b\n",
+      "  Metric: accuracy\n",
+      "  Best validation score: 0.810169\n",
+      "  Number of target algorithm runs: 39\n",
+      "  Number of successful target algorithm runs: 35\n",
+      "  Number of crashed target algorithm runs: 3\n",
+      "  Number of target algorithms that exceeded the time limit: 1\n",
+      "  Number of target algorithms that exceeded the memory limit: 0\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(cls.sprint_statistics())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "id": "6ac2b310-07f1-488f-bafc-b57dc7d65546",
    "metadata": {},
    "outputs": [
@@ -540,27 +545,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          rank  ensemble_weight                 type      cost  duration\n",
-      "model_id                                                                \n",
-      "33           1             0.02                  mlp  0.176271  4.140109\n",
-      "39           2             0.04   passive_aggressive  0.176271  1.114325\n",
-      "55           3             0.02                  mlp  0.176271  1.209011\n",
-      "56           4             0.04          extra_trees  0.179661  1.934459\n",
-      "72           5             0.02          extra_trees  0.183051  1.779294\n",
-      "68           6             0.42             adaboost  0.189831  1.719644\n",
-      "50           7             0.02        random_forest  0.193220  2.269418\n",
-      "23           8             0.06             adaboost  0.193220  2.300053\n",
-      "24           9             0.06             adaboost  0.200000  2.102787\n",
-      "73          10             0.02          extra_trees  0.200000  1.977286\n",
-      "19          11             0.06             adaboost  0.203390  2.681122\n",
-      "53          12             0.02          extra_trees  0.203390  2.224445\n",
-      "3           13             0.02             adaboost  0.210169  3.305413\n",
-      "45          14             0.02                  mlp  0.210169  2.439748\n",
-      "77          15             0.06          extra_trees  0.210169  1.859760\n",
-      "74          16             0.04        liblinear_svc  0.213559  1.403919\n",
-      "36          17             0.02        decision_tree  0.223729  0.947479\n",
-      "35          18             0.02  k_nearest_neighbors  0.223729  1.353935\n",
-      "67          19             0.02   passive_aggressive  0.230508  1.554203\n"
+      "          rank  ensemble_weight               type      cost  duration\n",
+      "model_id                                                              \n",
+      "7            1             0.02      liblinear_svc  0.189831  2.510254\n",
+      "10           2             0.02        extra_trees  0.189831  7.985898\n",
+      "4            3             0.08                lda  0.200000  3.639275\n",
+      "17           4             0.02                mlp  0.200000  8.072500\n",
+      "24           5             0.14           adaboost  0.200000  5.511101\n",
+      "35           6             0.04  gradient_boosting  0.200000  2.489987\n",
+      "19           7             0.18           adaboost  0.203390  7.481466\n",
+      "23           8             0.08           adaboost  0.213559  5.564543\n",
+      "27           9             0.04                lda  0.220339  2.586372\n",
+      "29          10             0.04                mlp  0.257627  2.713265\n",
+      "25          11             0.06        extra_trees  0.308475  4.559238\n",
+      "26          12             0.02       bernoulli_nb  0.315254  2.582031\n",
+      "38          13             0.06                qda  0.318644  2.758974\n",
+      "34          14             0.20                lda  0.325424  2.074090\n"
      ]
     }
    ],
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "id": "01be7264-6c4c-47cd-a06e-6a50f99014e3",
    "metadata": {},
    "outputs": [
@@ -623,11 +623,11 @@
        "      <th>892</th>\n",
        "      <td>3</td>\n",
        "      <td>male</td>\n",
-       "      <td>0.452723</td>\n",
+       "      <td>34.5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>330911</td>\n",
-       "      <td>0.015282</td>\n",
+       "      <td>7.8292</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Q</td>\n",
        "    </tr>\n",
@@ -635,11 +635,11 @@
        "      <th>893</th>\n",
        "      <td>3</td>\n",
        "      <td>female</td>\n",
-       "      <td>0.617566</td>\n",
+       "      <td>47.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>363272</td>\n",
-       "      <td>0.013663</td>\n",
+       "      <td>7.0000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
@@ -647,11 +647,11 @@
        "      <th>894</th>\n",
        "      <td>2</td>\n",
        "      <td>male</td>\n",
-       "      <td>0.815377</td>\n",
+       "      <td>62.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>240276</td>\n",
-       "      <td>0.018909</td>\n",
+       "      <td>9.6875</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Q</td>\n",
        "    </tr>\n",
@@ -659,11 +659,11 @@
        "      <th>895</th>\n",
        "      <td>3</td>\n",
        "      <td>male</td>\n",
-       "      <td>0.353818</td>\n",
+       "      <td>27.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>315154</td>\n",
-       "      <td>0.016908</td>\n",
+       "      <td>8.6625</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
@@ -671,11 +671,11 @@
        "      <th>896</th>\n",
        "      <td>3</td>\n",
        "      <td>female</td>\n",
-       "      <td>0.287881</td>\n",
+       "      <td>22.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>3101298</td>\n",
-       "      <td>0.023984</td>\n",
+       "      <td>12.2875</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
@@ -684,13 +684,13 @@
        "</div>"
       ],
       "text/plain": [
-       "             Pclass     Sex       Age  SibSp  Parch   Ticket      Fare Cabin  \\\n",
-       "PassengerId                                                                    \n",
-       "892               3    male  0.452723      0      0   330911  0.015282   NaN   \n",
-       "893               3  female  0.617566      1      0   363272  0.013663   NaN   \n",
-       "894               2    male  0.815377      0      0   240276  0.018909   NaN   \n",
-       "895               3    male  0.353818      0      0   315154  0.016908   NaN   \n",
-       "896               3  female  0.287881      1      1  3101298  0.023984   NaN   \n",
+       "             Pclass     Sex   Age  SibSp  Parch   Ticket     Fare Cabin  \\\n",
+       "PassengerId                                                               \n",
+       "892               3    male  34.5      0      0   330911   7.8292   NaN   \n",
+       "893               3  female  47.0      1      0   363272   7.0000   NaN   \n",
+       "894               2    male  62.0      0      0   240276   9.6875   NaN   \n",
+       "895               3    male  27.0      0      0   315154   8.6625   NaN   \n",
+       "896               3  female  22.0      1      1  3101298  12.2875   NaN   \n",
        "\n",
        "            Embarked  \n",
        "PassengerId           \n",
@@ -701,7 +701,7 @@
        "896                S  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,15 +710,12 @@
     "df_test = pd.read_csv(path/'test.csv', index_col = 'PassengerId')\n",
     "df_test = df_test.drop('Name', axis = 1)\n",
     "to_cat(df_test)\n",
-    "\n",
-    "for col in ['Age', 'Fare']:\n",
-    "    df_test[col] = ((df_test[col]) - df_test[col].min()) / (df_test[col].max() - df_test[col].min())\n",
     "df_test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "id": "3fb2ea4a-9ce5-414a-b02f-13a389376163",
    "metadata": {},
    "outputs": [],
@@ -728,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "id": "f03f8f93-ceba-46de-a0b5-eebfed5cc85f",
    "metadata": {},
    "outputs": [],
@@ -738,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "id": "36110e83-4904-4e0a-a59f-5a79874389c0",
    "metadata": {},
    "outputs": [
@@ -751,9 +748,9 @@
       "893,0\n",
       "894,0\n",
       "895,0\n",
-      "896,0\n",
+      "896,1\n",
       "897,0\n",
-      "898,1\n",
+      "898,0\n",
       "899,0\n",
       "900,1\n"
      ]
@@ -766,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "id": "760f8eb4-2348-46b4-8c8c-4752dbcbe5e0",
    "metadata": {},
    "outputs": [
@@ -774,7 +771,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2.77k/2.77k [00:00<00:00, 4.79kB/s]\n"
+      "100%|██████████| 2.77k/2.77k [00:00<00:00, 4.99kB/s]\n"
      ]
     },
     {
@@ -783,7 +780,7 @@
        "Successfully submitted to Titanic - Machine Learning from Disaster"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +788,7 @@
    "source": [
     "# Submit to competition\n",
     "from kaggle import api\n",
-    "api.competition_submit_cli('subm.csv', 'autoML 240s - normalized', comp)"
+    "api.competition_submit_cli('subm.csv', 'autoML 240s - no transformation', comp)"
    ]
   },
   {
