--- a/Titanic-competition/2022-08-22-titanic-autoML.ipynb
+++ b/Titanic-competition/2022-08-22-titanic-autoML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0e612bd7-3aa4-43c2-b5f1-1b8e6b30671d",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "except ModuleNotFoundError:\n",
     "    !pip install -Uq fastkaggle\n",
     "\n",
-    "from fastkaggle import *"
+    "from fastkaggle import *\n",
+    "print(fastkaggle.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ee41729f-5e3a-401b-a259-eee96f83851e",
    "metadata": {},
    "outputs": [],
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f45642a5-b30b-407a-9b65-245d030fed5a",
    "metadata": {},
    "outputs": [],
@@ -38,12 +39,13 @@
     "except ModuleNotFoundError:\n",
     "    !pip install -Uq fastai\n",
     "\n",
-    "from fastai.imports import *"
+    "from fastai.imports import *\n",
+    "print(fastai.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "a0ad8d90-8594-4271-b63a-5ce32dd2d17a",
    "metadata": {},
    "outputs": [
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a58fab94-a22e-471d-aedf-a64e44dc7a9d",
    "metadata": {},
    "outputs": [
@@ -214,7 +216,7 @@
        "5            35.0      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d8102576-ad3a-4c6a-bc81-315fa06818b0",
    "metadata": {},
    "outputs": [],
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "1729c29c-d1cc-46f9-86db-ebbab4b07128",
    "metadata": {},
    "outputs": [],
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "71a862b7-2753-4c05-b21e-8e3cc1422eb1",
    "metadata": {},
    "outputs": [],
@@ -266,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "3c44fa46-b95e-4bfc-8995-121c7295479a",
    "metadata": {},
    "outputs": [],
@@ -276,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "1a6402ac-5e92-4ce5-b9bc-678b9cd8a002",
    "metadata": {},
    "outputs": [
@@ -407,7 +409,7 @@
        "5             NaN        S  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "db99ad1c-7ea9-4779-9c2d-4e805b268d36",
    "metadata": {},
    "outputs": [],
@@ -426,45 +428,41 @@
     "%%capture\n",
     "try: import autosklearn\n",
     "except ModuleNotFoundError:\n",
-    "    !pip install -Uq auto-sklearn"
+    "    !pip install -Uq auto-sklearn\n",
+    "\n",
+    "print(autosklearn.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "8d11be50-3bc4-4094-b05f-74bab51d7111",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import autosklearn.classification\n",
-    "cls = autosklearn.classification.AutoSklearnClassifier(\n",
-    "    time_left_for_this_task = 240,\n",
-    "    per_run_time_limit = 60,\n",
+    "import autosklearn.experimental.askl2\n",
+    "import autosklearn.metrics\n",
+    "\n",
+    "cls = autosklearn.experimental.askl2.AutoSklearn2Classifier(\n",
+    "    seed = 42,\n",
+    "    time_left_for_this_task = 600,\n",
+    "    metric = autosklearn.metrics.roc_auc,\n",
     "    memory_limit = None,\n",
     "    n_jobs = -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "1af60bfa-ec80-4907-aa15-041a51231e23",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/root/mambaforge/lib/python3.9/site-packages/autosklearn/metalearning/metalearning/meta_base.py:68: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.metafeatures = self.metafeatures.append(metafeatures)\n",
-      "/root/mambaforge/lib/python3.9/site-packages/autosklearn/metalearning/metalearning/meta_base.py:72: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.algorithm_runs[metric].append(runs)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ERROR] [2022-08-23 15:10:36,573:asyncio.events] \n",
+      "[WARNING] [2022-08-23 16:04:42,272:Client-AutoML(42):494f167b-22fd-11ed-9b18-b6f6766cb37b] Capping the per_run_time_limit to 299.0 to have time for a least 2 models in each process.\n",
+      "[ERROR] [2022-08-23 16:14:41,232:asyncio.events] \n",
       "Traceback (most recent call last):\n",
       "  File \"/root/mambaforge/lib/python3.9/site-packages/distributed/client.py\", line 1427, in _handle_report\n",
       "    msgs = await self.scheduler_comm.comm.read()\n",
@@ -495,11 +493,12 @@
     {
      "data": {
       "text/plain": [
-       "AutoSklearnClassifier(memory_limit=None, n_jobs=-1, per_run_time_limit=60,\n",
-       "                      time_left_for_this_task=240)"
+       "AutoSklearn2Classifier(memory_limit=None, metric=roc_auc, n_jobs=-1,\n",
+       "                       per_run_time_limit=360, seed=42,\n",
+       "                       time_left_for_this_task=600)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "de6a731a-2a0b-4171-84a9-3baed326bef8",
    "metadata": {},
    "outputs": [
@@ -519,13 +518,13 @@
      "output_type": "stream",
      "text": [
       "auto-sklearn results:\n",
-      "  Dataset name: 30798895-22f5-11ed-8943-b6f6766cb37b\n",
-      "  Metric: accuracy\n",
-      "  Best validation score: 0.810169\n",
-      "  Number of target algorithm runs: 39\n",
-      "  Number of successful target algorithm runs: 35\n",
-      "  Number of crashed target algorithm runs: 3\n",
-      "  Number of target algorithms that exceeded the time limit: 1\n",
+      "  Dataset name: 494f167b-22fd-11ed-9b18-b6f6766cb37b\n",
+      "  Metric: roc_auc\n",
+      "  Best validation score: 0.882298\n",
+      "  Number of target algorithm runs: 119\n",
+      "  Number of successful target algorithm runs: 119\n",
+      "  Number of crashed target algorithm runs: 0\n",
+      "  Number of target algorithms that exceeded the time limit: 0\n",
       "  Number of target algorithms that exceeded the memory limit: 0\n",
       "\n"
      ]
@@ -537,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "6ac2b310-07f1-488f-bafc-b57dc7d65546",
    "metadata": {},
    "outputs": [
@@ -545,22 +544,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          rank  ensemble_weight               type      cost  duration\n",
-      "model_id                                                              \n",
-      "7            1             0.02      liblinear_svc  0.189831  2.510254\n",
-      "10           2             0.02        extra_trees  0.189831  7.985898\n",
-      "4            3             0.08                lda  0.200000  3.639275\n",
-      "17           4             0.02                mlp  0.200000  8.072500\n",
-      "24           5             0.14           adaboost  0.200000  5.511101\n",
-      "35           6             0.04  gradient_boosting  0.200000  2.489987\n",
-      "19           7             0.18           adaboost  0.203390  7.481466\n",
-      "23           8             0.08           adaboost  0.213559  5.564543\n",
-      "27           9             0.04                lda  0.220339  2.586372\n",
-      "29          10             0.04                mlp  0.257627  2.713265\n",
-      "25          11             0.06        extra_trees  0.308475  4.559238\n",
-      "26          12             0.02       bernoulli_nb  0.315254  2.582031\n",
-      "38          13             0.06                qda  0.318644  2.758974\n",
-      "34          14             0.20                lda  0.325424  2.074090\n"
+      "          rank  ensemble_weight                type      cost   duration\n",
+      "model_id                                                                \n",
+      "73           1             0.38  passive_aggressive  0.120786   7.989896\n",
+      "107          2             0.02  passive_aggressive  0.120802   7.265933\n",
+      "102          3             0.04  passive_aggressive  0.122511   7.118679\n",
+      "82           4             0.04  passive_aggressive  0.122751   7.381986\n",
+      "72           5             0.04         extra_trees  0.142228   7.261750\n",
+      "7            6             0.24   gradient_boosting  0.144250  17.426902\n",
+      "13           7             0.04         extra_trees  0.145024  11.672465\n",
+      "14           8             0.04   gradient_boosting  0.151695  20.849471\n",
+      "52           9             0.10   gradient_boosting  0.155913  20.018347\n"
      ]
     }
    ],
@@ -570,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "01be7264-6c4c-47cd-a06e-6a50f99014e3",
    "metadata": {},
    "outputs": [
@@ -701,7 +695,7 @@
        "896                S  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "3fb2ea4a-9ce5-414a-b02f-13a389376163",
    "metadata": {},
    "outputs": [],
@@ -725,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "f03f8f93-ceba-46de-a0b5-eebfed5cc85f",
    "metadata": {},
    "outputs": [],
@@ -735,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "36110e83-4904-4e0a-a59f-5a79874389c0",
    "metadata": {},
    "outputs": [
@@ -750,7 +744,7 @@
       "895,0\n",
       "896,1\n",
       "897,0\n",
-      "898,0\n",
+      "898,1\n",
       "899,0\n",
       "900,1\n"
      ]
@@ -763,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "760f8eb4-2348-46b4-8c8c-4752dbcbe5e0",
    "metadata": {},
    "outputs": [
@@ -771,7 +765,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2.77k/2.77k [00:00<00:00, 4.99kB/s]\n"
+      "100%|██████████| 2.77k/2.77k [00:00<00:00, 6.80kB/s]\n"
      ]
     },
     {
@@ -780,7 +774,7 @@
        "Successfully submitted to Titanic - Machine Learning from Disaster"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +782,7 @@
    "source": [
     "# Submit to competition\n",
     "from kaggle import api\n",
-    "api.competition_submit_cli('subm.csv', 'autoML 240s - no transformation', comp)"
+    "api.competition_submit_cli('subm.csv', 'auto-sklearn 2 - 10m', comp)"
    ]
   },
   {
