--- a/Titanic-competition/2022-08-22-titanic-auto-sklearn-2.ipynb
+++ b/Titanic-competition/2022-08-22-titanic-auto-sklearn-2.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "a58fab94-a22e-471d-aedf-a64e44dc7a9d",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "5            35.0      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "id": "c5266a3f-5d19-4f69-8ca7-1e9e99fb2574",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "gradient 2.0.5 requires attrs<=19, but you have attrs 22.1.0 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0mpandas_profiling version:  3.2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "try: import pandas_profiling\n",
+    "except ModuleNotFoundError:\n",
+    "    !pip install -Uq pandas_profiling\n",
+    "import pandas_profiling\n",
+    "print(\"pandas_profiling version: \", pandas_profiling.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5eb12a5e-04c9-45f8-b67e-d6366b31ea6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7dddc1095f714ea598cb532ab22459bf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Tab(children=(Tab(children=(GridBox(children=(VBox(children=(GridspecLayout(children=(HTML(valu…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "X_train.profile_report(progress_bar = False).to_widgets()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "d8102576-ad3a-4c6a-bc81-315fa06818b0",
    "metadata": {},
    "outputs": [],
