ignore all installation messages

--- a/Titanic-competition/2022-09-17-catboost-shap-titanic.ipynb
+++ b/Titanic-competition/2022-09-17-catboost-shap-titanic.ipynb
@@ -14,23 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "05415650-2910-4eb6-a3d2-1160519058b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "gradient 2.0.5 requires attrs<=19, but you have attrs 22.1.0 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install -Uq -r requirements.txt"
+    "%pip install -Uqq -r requirements.txt"
    ]
   },
   {
