include 'name' column
score: 0.79186

--- a/Titanic-competition/2022-09-17-catboost-shap-titanic.ipynb
+++ b/Titanic-competition/2022-09-17-catboost-shap-titanic.ipynb
@@ -14,10 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "05415650-2910-4eb6-a3d2-1160519058b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install -Uqq -r requirements.txt"
    ]
@@ -214,12 +222,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop(['Survived', 'Name'], axis = 1)"
+    "X = df.drop(['Survived'], axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "85363c95-0070-40bb-ab2c-43dc89ba8a87",
    "metadata": {},
    "outputs": [
@@ -245,6 +253,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
        "      <th>SibSp</th>\n",
@@ -265,12 +274,14 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>892</th>\n",
        "      <td>3</td>\n",
+       "      <td>Kelly, Mr. James</td>\n",
        "      <td>male</td>\n",
        "      <td>34.5</td>\n",
        "      <td>0</td>\n",
@@ -283,6 +294,7 @@
        "    <tr>\n",
        "      <th>893</th>\n",
        "      <td>3</td>\n",
+       "      <td>Wilkes, Mrs. James (Ellen Needs)</td>\n",
        "      <td>female</td>\n",
        "      <td>47.0</td>\n",
        "      <td>1</td>\n",
@@ -295,6 +307,7 @@
        "    <tr>\n",
        "      <th>894</th>\n",
        "      <td>2</td>\n",
+       "      <td>Myles, Mr. Thomas Francis</td>\n",
        "      <td>male</td>\n",
        "      <td>62.0</td>\n",
        "      <td>0</td>\n",
@@ -307,6 +320,7 @@
        "    <tr>\n",
        "      <th>895</th>\n",
        "      <td>3</td>\n",
+       "      <td>Wirz, Mr. Albert</td>\n",
        "      <td>male</td>\n",
        "      <td>27.0</td>\n",
        "      <td>0</td>\n",
@@ -319,6 +333,7 @@
        "    <tr>\n",
        "      <th>896</th>\n",
        "      <td>3</td>\n",
+       "      <td>Hirvonen, Mrs. Alexander (Helga E Lindqvist)</td>\n",
        "      <td>female</td>\n",
        "      <td>22.0</td>\n",
        "      <td>1</td>\n",
@@ -333,37 +348,38 @@
        "</div>"
       ],
       "text/plain": [
-       "             Pclass     Sex   Age  SibSp  Parch   Ticket     Fare Cabin  \\\n",
-       "PassengerId                                                               \n",
-       "892               3    male  34.5      0      0   330911   7.8292   NaN   \n",
-       "893               3  female  47.0      1      0   363272   7.0000   NaN   \n",
-       "894               2    male  62.0      0      0   240276   9.6875   NaN   \n",
-       "895               3    male  27.0      0      0   315154   8.6625   NaN   \n",
-       "896               3  female  22.0      1      1  3101298  12.2875   NaN   \n",
+       "             Pclass                                          Name     Sex  \\\n",
+       "PassengerId                                                                 \n",
+       "892               3                              Kelly, Mr. James    male   \n",
+       "893               3              Wilkes, Mrs. James (Ellen Needs)  female   \n",
+       "894               2                     Myles, Mr. Thomas Francis    male   \n",
+       "895               3                              Wirz, Mr. Albert    male   \n",
+       "896               3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)  female   \n",
        "\n",
-       "            Embarked  \n",
-       "PassengerId           \n",
-       "892                Q  \n",
-       "893                S  \n",
-       "894                Q  \n",
-       "895                S  \n",
-       "896                S  "
+       "              Age  SibSp  Parch   Ticket     Fare Cabin Embarked  \n",
+       "PassengerId                                                       \n",
+       "892          34.5      0      0   330911   7.8292   NaN        Q  \n",
+       "893          47.0      1      0   363272   7.0000   NaN        S  \n",
+       "894          62.0      0      0   240276   9.6875   NaN        Q  \n",
+       "895          27.0      0      0   315154   8.6625   NaN        S  \n",
+       "896          22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_test = pd.read_csv('titanic/test.csv', index_col = 'PassengerId')\n",
-    "X_test = df_test.drop('Name', axis = 1)\n",
+    "# X_test = df_test.drop('Name', axis = 1)\n",
+    "X_test = df_test.copy()\n",
     "X_test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9e233172-cb59-4a0a-9561-f018730f713c",
    "metadata": {},
    "outputs": [],
@@ -389,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7512f0f2-5290-4b5e-808b-16a48d789c68",
    "metadata": {},
    "outputs": [
@@ -397,18 +413,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install -Uq catboost"
+    "%pip install -Uqq catboost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "c8804f16-8dcd-4836-b6c5-dd3f03f04a47",
    "metadata": {},
    "outputs": [
@@ -427,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9601d9eb-5fec-4bd6-8f59-bbb316b519e1",
    "metadata": {},
    "outputs": [],
@@ -437,17 +452,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "18c2489a-e07e-4e7b-9e0d-add6d7b963ea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostClassifier at 0x7fae11e6d610>"
+       "<catboost.core.CatBoostClassifier at 0x7ff087ea2b80>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "e73cd40f-1ef1-4b6c-8949-3f38884790b9",
    "metadata": {},
    "outputs": [],
@@ -482,17 +497,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "eeaf1f43-22e3-40f4-91e9-fd133dd9227f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8338945005611672"
+       "0.8327721661054994"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "8e19fee7-9302-48cc-a380-b4e1618587f5",
    "metadata": {},
    "outputs": [
@@ -511,15 +526,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sex: 25.60821888167032\n",
-      "Ticket: 18.57844891909078\n",
-      "Pclass: 12.344953433318327\n",
-      "Age: 10.3638125501517\n",
-      "SibSp: 7.436047061771068\n",
-      "Parch: 7.144246590871276\n",
-      "Cabin: 6.802311633819684\n",
-      "Embarked: 5.932812958742824\n",
-      "Fare: 5.789147970563915\n"
+      "Sex: 27.704338331806746\n",
+      "Ticket: 16.501568637610738\n",
+      "Pclass: 12.642597733366086\n",
+      "Age: 10.48387106275278\n",
+      "Parch: 8.234077732422607\n",
+      "SibSp: 6.461389569593476\n",
+      "Fare: 6.337253910033611\n",
+      "Embarked: 5.909042169558723\n",
+      "Cabin: 5.725860852855256\n",
+      "Name: 0.0\n"
      ]
     }
    ],
@@ -532,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "c643dc5d-e604-4a43-a46c-de44a4abaa97",
    "metadata": {},
    "outputs": [],
@@ -542,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 18,
    "id": "5d22b3f1-e120-43ee-aab8-141ae91e58a7",
    "metadata": {},
    "outputs": [],
@@ -554,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 19,
    "id": "1975bc1b-0b66-44cb-a16f-47301017fd50",
    "metadata": {},
    "outputs": [
@@ -582,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 20,
    "id": "af60ca9c-30d6-4dc4-9adc-a355805c7972",
    "metadata": {},
    "outputs": [
@@ -590,7 +606,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2.77k/2.77k [00:00<00:00, 6.09kB/s]\n"
+      "100%|██████████| 2.77k/2.77k [00:00<00:00, 5.46kB/s]\n"
      ]
     },
     {
@@ -599,7 +615,7 @@
        "Successfully submitted to Titanic - Machine Learning from Disaster"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +623,7 @@
    "source": [
     "from kaggle import api\n",
     "api.competition_submit_cli('subm.csv',\n",
-    "                          'catboost fillna = -999 train val',\n",
+    "                          'catboost fillna = -999 train val with name',\n",
     "                          'titanic')"
    ]
   },
