remove 'name' column
This column did not contribute whatsoever to the predictive modeling

--- a/Titanic-competition/2022-09-17-catboost-shap-titanic.ipynb
+++ b/Titanic-competition/2022-09-17-catboost-shap-titanic.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "e98b0dd0-9ec3-4168-a273-f1ba048332ca",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "5            35.0      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "17d64f46-4910-4b45-9582-8528947a576c",
    "metadata": {},
    "outputs": [],
@@ -217,17 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "9408b5bf-ddbd-4409-88da-c080511c07e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop(['Survived'], axis = 1)"
+    "X = df.drop(['Survived', 'Name'], axis = 1).copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "id": "85363c95-0070-40bb-ab2c-43dc89ba8a87",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
        "      <th>SibSp</th>\n",
@@ -274,14 +273,12 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>892</th>\n",
        "      <td>3</td>\n",
-       "      <td>Kelly, Mr. James</td>\n",
        "      <td>male</td>\n",
        "      <td>34.5</td>\n",
        "      <td>0</td>\n",
@@ -294,7 +291,6 @@
        "    <tr>\n",
        "      <th>893</th>\n",
        "      <td>3</td>\n",
-       "      <td>Wilkes, Mrs. James (Ellen Needs)</td>\n",
        "      <td>female</td>\n",
        "      <td>47.0</td>\n",
        "      <td>1</td>\n",
@@ -307,7 +303,6 @@
        "    <tr>\n",
        "      <th>894</th>\n",
        "      <td>2</td>\n",
-       "      <td>Myles, Mr. Thomas Francis</td>\n",
        "      <td>male</td>\n",
        "      <td>62.0</td>\n",
        "      <td>0</td>\n",
@@ -320,7 +315,6 @@
        "    <tr>\n",
        "      <th>895</th>\n",
        "      <td>3</td>\n",
-       "      <td>Wirz, Mr. Albert</td>\n",
        "      <td>male</td>\n",
        "      <td>27.0</td>\n",
        "      <td>0</td>\n",
@@ -333,7 +327,6 @@
        "    <tr>\n",
        "      <th>896</th>\n",
        "      <td>3</td>\n",
-       "      <td>Hirvonen, Mrs. Alexander (Helga E Lindqvist)</td>\n",
        "      <td>female</td>\n",
        "      <td>22.0</td>\n",
        "      <td>1</td>\n",
@@ -348,38 +341,37 @@
        "</div>"
       ],
       "text/plain": [
-       "             Pclass                                          Name     Sex  \\\n",
-       "PassengerId                                                                 \n",
-       "892               3                              Kelly, Mr. James    male   \n",
-       "893               3              Wilkes, Mrs. James (Ellen Needs)  female   \n",
-       "894               2                     Myles, Mr. Thomas Francis    male   \n",
-       "895               3                              Wirz, Mr. Albert    male   \n",
-       "896               3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)  female   \n",
+       "             Pclass     Sex   Age  SibSp  Parch   Ticket     Fare Cabin  \\\n",
+       "PassengerId                                                               \n",
+       "892               3    male  34.5      0      0   330911   7.8292   NaN   \n",
+       "893               3  female  47.0      1      0   363272   7.0000   NaN   \n",
+       "894               2    male  62.0      0      0   240276   9.6875   NaN   \n",
+       "895               3    male  27.0      0      0   315154   8.6625   NaN   \n",
+       "896               3  female  22.0      1      1  3101298  12.2875   NaN   \n",
        "\n",
-       "              Age  SibSp  Parch   Ticket     Fare Cabin Embarked  \n",
-       "PassengerId                                                       \n",
-       "892          34.5      0      0   330911   7.8292   NaN        Q  \n",
-       "893          47.0      1      0   363272   7.0000   NaN        S  \n",
-       "894          62.0      0      0   240276   9.6875   NaN        Q  \n",
-       "895          27.0      0      0   315154   8.6625   NaN        S  \n",
-       "896          22.0      1      1  3101298  12.2875   NaN        S  "
+       "            Embarked  \n",
+       "PassengerId           \n",
+       "892                Q  \n",
+       "893                S  \n",
+       "894                Q  \n",
+       "895                S  \n",
+       "896                S  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_test = pd.read_csv('titanic/test.csv', index_col = 'PassengerId')\n",
-    "# X_test = df_test.drop('Name', axis = 1)\n",
-    "X_test = df_test.copy()\n",
+    "X_test = df_test.drop('Name', axis = 1).copy()\n",
     "X_test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "id": "9e233172-cb59-4a0a-9561-f018730f713c",
    "metadata": {},
    "outputs": [],
@@ -442,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "9601d9eb-5fec-4bd6-8f59-bbb316b519e1",
    "metadata": {},
    "outputs": [],
@@ -452,17 +444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "id": "18c2489a-e07e-4e7b-9e0d-add6d7b963ea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostClassifier at 0x7ff087ea2b80>"
+       "<catboost.core.CatBoostClassifier at 0x7fef699dfdf0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "id": "e73cd40f-1ef1-4b6c-8949-3f38884790b9",
    "metadata": {},
    "outputs": [],
@@ -497,17 +489,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "id": "eeaf1f43-22e3-40f4-91e9-fd133dd9227f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8327721661054994"
+       "0.8338945005611672"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "id": "8e19fee7-9302-48cc-a380-b4e1618587f5",
    "metadata": {},
    "outputs": [
@@ -526,16 +518,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sex: 27.704338331806746\n",
-      "Ticket: 16.501568637610738\n",
-      "Pclass: 12.642597733366086\n",
-      "Age: 10.48387106275278\n",
-      "Parch: 8.234077732422607\n",
-      "SibSp: 6.461389569593476\n",
-      "Fare: 6.337253910033611\n",
-      "Embarked: 5.909042169558723\n",
-      "Cabin: 5.725860852855256\n",
-      "Name: 0.0\n"
+      "Sex: 25.60821888167032\n",
+      "Ticket: 18.57844891909078\n",
+      "Pclass: 12.344953433318327\n",
+      "Age: 10.3638125501517\n",
+      "SibSp: 7.436047061771068\n",
+      "Parch: 7.144246590871276\n",
+      "Cabin: 6.802311633819684\n",
+      "Embarked: 5.932812958742824\n",
+      "Fare: 5.789147970563915\n"
      ]
     }
    ],
@@ -548,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "id": "c643dc5d-e604-4a43-a46c-de44a4abaa97",
    "metadata": {},
    "outputs": [],
@@ -558,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "id": "5d22b3f1-e120-43ee-aab8-141ae91e58a7",
    "metadata": {},
    "outputs": [],
@@ -570,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "id": "1975bc1b-0b66-44cb-a16f-47301017fd50",
    "metadata": {},
    "outputs": [
